# cloud-data-pipeline

./: manifest.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: deploy_to_aws.yml  release.yaml
aws/: cloudformation.yaml
src/cloud_data_pipeline/: data_preprocessor.py
tests/: test_data_preprocessor.py
