[tool.poetry]
name = "cloud-data-pipeline"
version = "0.1.0"
description = ""
authors = ["Onesmus Wambugu <onesmus1024@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_data_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
boto3 = "^1.34.15"
pytest = "^7.4.4"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
